--- a/index.html
+++ b/index.html
@@ -8,19 +8,27 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Nunito', sans-serif;
+            font-family: 'Fredoka', sans-serif;
+            background-color: #FAF9F6; /* Paper-like off-white */
         }
-        .soft-shadow {
-            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.05), 0 8px 10px -6px rgba(0, 0, 0, 0.05);
+        .paper-border {
+            border-width: 2px;
+            border-style: solid;
+            border-color: #E2E8F0;
         }
-        .pastel-post-it {
-            transition: transform 0.2s ease-in-out;
+        .view-transition {
+            transition: all 0.3s ease-in-out;
         }
-        .pastel-post-it:hover {
-            transform: translateY(-4px) rotate(-1deg);
+        .flat-card {
+            background: white;
+            border-radius: 20px;
+            transition: transform 0.2s ease;
+        }
+        .flat-card:hover {
+            transform: translateY(-2px);
         }
     </style>
 <script type="importmap">
@@ -34,7 +42,7 @@
 }
 </script>
 </head>
-<body class="bg-[#F8FAFF] text-slate-800">
+<body class="text-slate-700">
     <div id="root"></div>
 </body>
 </html>
